--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             </div>
             
             <div class="text-center mt-16">
-                <a href="#creations" class="inline-block bg-web-glow hover:bg-blue-600 text-white font-bold py-4 px-8 rounded-full text-lg transition-all duration-300 transform hover:scale-105 shadow-lg animate-glow">
+                <a href="creations" class="inline-block bg-web-glow hover:bg-blue-600 text-white font-bold py-4 px-8 rounded-full text-lg transition-all duration-300 transform hover:scale-105 shadow-lg animate-glow">
                     See More
                 </a>
             </div>
