--- a/creations.html
+++ b/creations.html
@@ -67,11 +67,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="fixed inset-0 bg-web-blue bg-opacity-95 z-40 transform -translate-x-full transition-transform duration-300 pt-20">
         <div class="container mx-auto px-4 py-8 flex flex-col space-y-8 text-center">
-            <a href="#home" class="text-3xl font-bold nav-link py-4">Home</a>
-            <a href="#plans" class="text-3xl font-bold nav-link py-4">Plans</a>
-            <a href="#about" class="text-3xl font-bold nav-link py-4">About</a>
-            <a href="#contact" class="text-3xl font-bold nav-link py-4">Contact</a>
-            <a href="#creations" class="text-3xl font-bold nav-link py-4">Creations</a>
+            <a href="https://webomancy.github.io/" class="text-3xl font-bold nav-link py-4">Homepage</a>
         </div>
     </div>
 
