--- a/creations.html
+++ b/creations.html
@@ -83,11 +83,11 @@
                 
                 <!-- Portfolio Item -->
                 <div class="portfolio-item relative rounded-xl overflow-hidden h-80">
-                    <img src="image1.webp" alt="Luma Core" class="w-full h-full object-cover">
+                    <img src="image1.webp" alt="Noir Dining" class="w-full h-full object-cover">
                     <div class="portfolio-overlay absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
-                        <h3 class="text-2xl font-bold mb-2">Luma Core</h3>
-                        <p class="text-web-light mb-4">AI platform that transforms your creative workflow</p>
-                        <a href="#" class="text-web-glow font-bold hover:underline">View Site</a>
+                        <h3 class="text-2xl font-bold mb-2">Noir Dining</h3>
+                        <p class="text-web-light mb-4">A simple dark-themed restaurant website</p>
+                        <a href="https://webomancy-noir-dining-t4-demo.pages.dev/" class="text-web-glow font-bold hover:underline" target="_blank">View Site</a>
                     </div>
                 </div>
                 
