--- a/index.html
+++ b/index.html
@@ -365,6 +365,16 @@
                         <a href="https://webomancy-noir-dining-t4-demo.pages.dev/" class="text-web-glow font-bold hover:underline" target="_blank">View Site</a>
                     </div>
                 </div>
+
+                <!-- Portfolio Item -->
+                <div class="portfolio-item relative rounded-xl overflow-hidden h-80">
+                    <img src="image2.webp" alt="Noir Kitchen" class="w-full h-full object-cover">
+                    <div class="portfolio-overlay absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-bold mb-2">Noir Kitchen</h3>
+                        <p class="text-web-light mb-4">A simple light-themed restaurant website</p>
+                        <a href="https://webomancy-noir-kitchen-light-t4-demo.pages.dev/" class="text-web-glow font-bold hover:underline" target="_blank">View Site</a>
+                    </div>
+                </div>
               
             </div>
             
