--- a/creations.html
+++ b/creations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webomancy - Get Your Business Online!</title>
+    <title>Our Creations</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -88,6 +88,16 @@
                         <h3 class="text-2xl font-bold mb-2">Noir Dining</h3>
                         <p class="text-web-light mb-4">A simple dark-themed restaurant website</p>
                         <a href="https://webomancy-noir-dining-t4-demo.pages.dev/" class="text-web-glow font-bold hover:underline" target="_blank">View Site</a>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item -->
+                <div class="portfolio-item relative rounded-xl overflow-hidden h-80">
+                    <img src="image2.webp" alt="Noir Kitchen" class="w-full h-full object-cover">
+                    <div class="portfolio-overlay absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-bold mb-2">Noir Kitchen</h3>
+                        <p class="text-web-light mb-4">A simple light-themed restaurant website</p>
+                        <a href="https://webomancy-noir-kitchen-light-t4-demo.pages.dev/" class="text-web-glow font-bold hover:underline" target="_blank">View Site</a>
                     </div>
                 </div>
                 
